# LeetCodeProblems

./: .gitignore  LeetCodeProblems.sln
LeetCodeProblems/: BaseProblemClass.cs  LeetCode3longest-substring-without-repeating-characters.cs  LeetCode433Minimum Genetic Mutation.cs  LeetCodeProblems.csproj  Program.cs
LeetCodeProblems/Auxilaries/: ScriptNameConvertor.cs  TreeBuilder.cs  TreePrinter.cs
LeetCodeProblems/Miscellaneous/: QuickSortSample.cs  SearchInNames.cs
LeetCodeProblems/Models/: Graph.cs  LinkedList.cs  TreeNode.cs  Trie.cs
LeetCodeProblems/Problems/: GeekForGeekTopologicalsort.cs  Graph.cs  LeetCode1004MaxConsecutiveOnesIII.cs  LeetCode1007MinimumDominoRotationsForEqualRow.cs  LeetCode1014BestSightseeingPair.cs  LeetCode1028RecoverATreeFromPreorderTraversal.cs  LeetCode102BinaryTreeLevelOrderTraversal.cs  LeetCode103BinaryTreeZigzagLevelOrderTraversal.cs  LeetCode105ConstructBinaryTreeFromPreorderAndInorderTraversal.cs  LeetCode1071GreatestCommonDivisorofStrings.cs  LeetCode1079LetterTilePossibilities.cs  LeetCode1115PrintFooBarAlternately.cs  LeetCode1123LowestCommonAncestorOfDeepestLeaves.cs  LeetCode112PathSum.cs  LeetCode1137NthTribonacciNumber.cs  LeetCode1143LongestCommonSubsequence.cs  LeetCode114FlattenBinaryTreeToLinkedList.cs  LeetCode1161MaximumLevelSumofaBinaryTree.cs  LeetCode118PascalsTriangle.cs  LeetCode1207UniqueNumberOfOccurrences.cs  LeetCode120Triangle.cs  LeetCode121BestTimeToBuyAndSellStock.cs  LeetCode122BestTimeToBuyAndSellStockII.cs  LeetCode123BestTimetoBuyandSellStockIII.cs  LeetCode124BinaryTreeMaximumPathSum.cs  LeetCode125ValidPalindrome.cs  LeetCode1268SearchSuggestionsSystem.cs  LeetCode126WordLadderII.cs  LeetCode127WordLadder.cs  LeetCode128LongestConsecutiveSequence.cs  LeetCode129SumRootToLeafNumbers.cs  LeetCode130SurroundedRegions.cs  LeetCode1318MinimumFlipstoMakeaORbEqualtoc.cs  LeetCode131PalindromePartitioning.cs  LeetCode132PalindromePartitioningII.cs  LeetCode1352ProductOfTheLastKNumbers.cs  LeetCode1368MinimumCostToMakeAtLeastOneValidPathInAGrid.cs  LeetCode136SingleNumber.cs  LeetCode1372LongestZigZagPathinaBinaryTree.cs  LeetCode137SingleNumberII.cs  (+248 more)
LeetCodeProblemsCMake/: CMakeLists.txt  main  main.cpp  sources.txt
LeetCodeProblemsCMake/Auxilary/: Auxilaries.cpp  Auxilaries.h  ListNode.h  ScriptNamePrinter.cpp  TreeNode.cpp  TreeNode.h
LeetCodeProblemsCMake/Problems/: .LeetCode440KthSmallestInLexicographicalOrder.cpp.swp  BaseProblem.cpp  BaseProblem.h  GeeksForGeeksAlienDictionary.cpp  GeeksForGeeksAlienDictionary.h  GeeksForGeeksLongestIncreasingSubsequence.cpp  GeeksForGeeksLongestIncreasingSubsequence.h  GeeksForGeeksTravellingSalesmanProblem.cpp  GeeksForGeeksTravellingSalesmanProblem.h  LeetCode1010PairsOfSongsWithTotalDurationsDivisibleBy60.cpp  LeetCode1010PairsOfSongsWithTotalDurationsDivisibleBy60.h  LeetCode1015SmallestIntegerDivisibleByK.cpp  LeetCode1015SmallestIntegerDivisibleByK.h  LeetCode1018BinaryPrefixDivisibleBy5.cpp  LeetCode1018BinaryPrefixDivisibleBy5.h  LeetCode1022SumOfRootToLeafBinaryNumbers.cpp  LeetCode1022SumOfRootToLeafBinaryNumbers.h  LeetCode1039MinimumScoreTriangulationOfPolygon.cpp  LeetCode1039MinimumScoreTriangulationOfPolygon.h  LeetCode1061LexicographicallySmallestEquivalentString.cpp  LeetCode1061LexicographicallySmallestEquivalentString.h  LeetCode107BinaryTreeLevelOrderTraversalII.cpp  LeetCode107BinaryTreeLevelOrderTraversalII.h  LeetCode109ConvertSortedListToBinarySearchTree.cpp  LeetCode109ConvertSortedListToBinarySearchTree.h  LeetCode110BalancedBinaryTree.cpp  LeetCode110BalancedBinaryTree.h  LeetCode1115PrintFooBarAlternately.cpp  LeetCode1115PrintFooBarAlternately.h  LeetCode1128NumberOfEquivalentDominoPairs.cpp  LeetCode1128NumberOfEquivalentDominoPairs.h  LeetCode113PathSumII.cpp  LeetCode113PathSumII.h  LeetCode115DistinctSubsequences.cpp  LeetCode115DistinctSubsequences.h  LeetCode116PopulatingNextRightPointersInEachNode.cpp  LeetCode116PopulatingNextRightPointersInEachNode.h  LeetCode1261FindElementsInAContaminatedBinaryTree.cpp  LeetCode1261FindElementsInAContaminatedBinaryTree.h  LeetCode1262GreatestSumDivisibleByThree.cpp  (+517 more)
LeetCodeProblemsCpp/: LeetCodeProblemsCpp.sln
LeetCodeProblemsCpp/LeetCodeProblemsCpp/: LeetCodeProblemsCpp.cpp  LeetCodeProblemsCpp.vcxproj  LeetCodeProblemsCpp.vcxproj.filters
LeetCodeProblemsGo/: LeetCode1976NumberOfWaysToArriveAtDestination.go  LeetCode2115FindAllPossibleRecipesFromGivenSupplies.go  LeetCode2206DivideArrayIntoEqualPairs.go  LeetCode2685CountTheNumberOfCompleteComponents.go  LeetCode299BullsAndCows.go  LeetCode3169CountDaysWithoutMeetings.go  LeetCode3191MinimumOperationsToMakeBinaryArrayElementsEqualToOneI.go  LeetCode337HouseRobberIII.go  LeetCode3394CheckIfGridCanBeCutIntoSections.go  LeetCode95UniqueBinarySearchTreesII.go  ScripNamePrinter.go  go.mod  main.go  tree.go
LeetCodeProblemsGo/LeetCode1015SmallestIntegerDivisibleByK/: LeetCode1015SmallestIntegerDivisibleByK.go
LeetCodeProblemsGo/LeetCode1018BinaryPrefixDivisibleBy5/: LeetCode1018BinaryPrefixDivisibleBy5.go
LeetCodeProblemsGo/LeetCode1022SumOfRootToLeafBinaryNumbers/: LeetCode1022SumOfRootToLeafBinaryNumbers.go
LeetCodeProblemsGo/LeetCode1039MinimumScoreTriangulationOfPolygon/: LeetCode1039MinimumScoreTriangulationOfPolygon.go
LeetCodeProblemsGo/LeetCode1061LexicographicallySmallestEquivalentString/: LeetCode1061LexicographicallySmallestEquivalentString.go
LeetCodeProblemsGo/LeetCode110BalancedBinaryTree/: LeetCode110BalancedBinaryTree.go
LeetCodeProblemsGo/LeetCode1115PrintFooBarAlternately/: LeetCode1115PrintFooBarAlternately.go
LeetCodeProblemsGo/LeetCode1123LowestCommonAncestorOfDeepestLeaves/: LeetCode1123LowestCommonAncestorOfDeepestLeaves.go
LeetCodeProblemsGo/LeetCode1128NumberOfEquivalentDominoPairs/: LeetCode1128NumberOfEquivalentDominoPairs.go
LeetCodeProblemsGo/LeetCode1161MaximumLevelSumOfABinaryTree/: LeetCode1161MaximumLevelSumOfABinaryTree.go
LeetCodeProblemsGo/LeetCode1233RemoveSubFoldersFromTheFilesystem/: LeetCode1233RemoveSubFoldersFromTheFilesystem.go
vscodecppapp/: CMakeLists.txt  main.cpp
(+568 files in other folders)
