cmake_minimum_required(VERSION 3.30)
project(LeetCodeProblemsCMake)

set(CMAKE_CXX_STANDARD 20)

add_executable(LeetCodeProblemsCMake main.cpp
        Auxilary/TreeNode.cpp
        Auxilary/TreeNode.h
        Auxilary/Auxilaries.cpp
        Auxilary/Auxilaries.h
        Problems/BaseProblem.cpp
        Problems/BaseProblem.h
        Auxilary/ScriptNamePrinter.cpp
        Auxilary/ScriptNamePrinter.h
        Problems/LeetCode2559CountVowelStringsInRanges.cpp
        Problems/LeetCode2559CountVowelStringsInRanges.h
        Problems/LeetCode2138DivideAStringIntoGroupsOfSizeK.cpp
        Problems/LeetCode2138DivideAStringIntoGroupsOfSizeK.h
        Problems/LeetCode40CombinationSumII.cpp
        Problems/LeetCode40CombinationSumII.h
        Problems/LeetCode2270NumberOfWaysToSplitArray.cpp
        Problems/LeetCode2270NumberOfWaysToSplitArray.h
        Problems/LeetCode184Sum.cpp
        Problems/LeetCode184Sum.h
        Problems/LeetCode47PermutationsII.cpp
        Problems/LeetCode47PermutationsII.h
        Problems/LeetCode1930UniqueLength3PalindromicSubsequences.cpp
        Problems/LeetCode1930UniqueLength3PalindromicSubsequences.h
        Problems/LeetCode44WildcardMatching.cpp
        Problems/LeetCode44WildcardMatching.h
        Problems/LeetCode60PermutationSequence.cpp
        Problems/LeetCode60PermutationSequence.h
        Auxilary/ListNode.h
        Problems/LeetCode83RemoveDuplicatesFromSortedList.cpp
        Problems/LeetCode83RemoveDuplicatesFromSortedList.h
        Problems/LeetCode65ValidNumber.cpp
        Problems/LeetCode65ValidNumber.h
        Problems/LeetCode881BoatsToSavePeople.cpp
        Problems/LeetCode881BoatsToSavePeople.h
        Problems/LeetCode85MaximalRectangle.cpp
        Problems/LeetCode85MaximalRectangle.h
        Problems/LeetCode2185CountingWordsWithAGivenPrefix.cpp
        Problems/LeetCode2185CountingWordsWithAGivenPrefix.h
        Problems/LeetCode310MinimumHeightTrees.cpp
        Problems/LeetCode310MinimumHeightTrees.h
        Problems/LeetCode1443MinimumTimeToCollectAllApplesInATree.cpp
        Problems/LeetCode1443MinimumTimeToCollectAllApplesInATree.h
        Problems/LeetCode916WordSubsets.cpp
        Problems/LeetCode916WordSubsets.h
        Problems/LeetCode382LinkedListRandomNode.cpp
        Problems/LeetCode382LinkedListRandomNode.h
        Problems/LeetCode1404NumberOfStepsToReduceANumberInBinaryRepresentationToOne.cpp
        Problems/LeetCode1404NumberOfStepsToReduceANumberInBinaryRepresentationToOne.h
        Problems/LeetCode107BinaryTreeLevelOrderTraversalII.cpp
        Problems/LeetCode107BinaryTreeLevelOrderTraversalII.h
        Problems/LeetCode204CountPrimes.cpp
        Problems/LeetCode204CountPrimes.h
        Problems/LeetCode2657FindThePrefixCommonArrayOfTwoArrays.cpp
        Problems/LeetCode2657FindThePrefixCommonArrayOfTwoArrays.h
        Problems/LeetCode535EncodeAndDecodeTinyURL.cpp
        Problems/LeetCode535EncodeAndDecodeTinyURL.h
        Problems/LeetCode109ConvertSortedListToBinarySearchTree.cpp
        Problems/LeetCode109ConvertSortedListToBinarySearchTree.h
        Problems/LeetCode115DistinctSubsequences.cpp
        Problems/LeetCode115DistinctSubsequences.h
        Problems/LeetCode2429MinimizeXOR.cpp
        Problems/LeetCode2429MinimizeXOR.h
        Problems/LeetCode140WordBreakII.cpp
        Problems/LeetCode140WordBreakII.h
        Problems/LeetCode154FindMinimumInRotatedSortedArrayII.cpp
        Problems/LeetCode154FindMinimumInRotatedSortedArrayII.h
        Problems/LeetCode2425BitwiseXOROfAllPairings.cpp
        Problems/LeetCode2425BitwiseXOROfAllPairings.h
        Problems/LeetCode43MultiplyStrings.cpp
        Problems/LeetCode43MultiplyStrings.h
        Problems/LeetCode113PathSumII.cpp
        Problems/LeetCode113PathSumII.h
        Problems/LeetCode2683NeighboringBitwiseXOR.cpp
        Problems/LeetCode2683NeighboringBitwiseXOR.h
        Problems/LeetCode29DivideTwoIntegers.cpp
        Problems/LeetCode29DivideTwoIntegers.h
        Problems/LeetCode214ShortestPalindrome.cpp
        Problems/LeetCode214ShortestPalindrome.h
        Problems/LeetCode743NetworkDelayTime.cpp
        Problems/LeetCode743NetworkDelayTime.h
        Problems/LeetCode980UniquePathsIII.cpp
        Problems/LeetCode980UniquePathsIII.h
        Problems/LeetCode2661FirstCompletelyPaintedRowOrColumn.cpp
        Problems/LeetCode2661FirstCompletelyPaintedRowOrColumn.h
        Problems/LeetCode1267CountServersThatCommunicate.cpp
        Problems/LeetCode1267CountServersThatCommunicate.h
        Problems/LeetCode174DungeonGame.cpp
        Problems/LeetCode174DungeonGame.h
        Problems/LeetCode191NumberOf1Bits.cpp
        Problems/LeetCode191NumberOf1Bits.h
        Problems/LeetCode89GrayCode.cpp
        Problems/LeetCode89GrayCode.h
        Problems/LeetCode802FindEventualSafeStates.cpp
        Problems/LeetCode802FindEventualSafeStates.h
        Problems/LeetCode2658MaximumNumberOfFishInAGrid.cpp
        Problems/LeetCode2658MaximumNumberOfFishInAGrid.h
        Problems/LeetCode684RedundantConnection.cpp
        Problems/LeetCode684RedundantConnection.h
        Problems/GeeksForGeeksAlienDictionary.cpp
        Problems/GeeksForGeeksAlienDictionary.h
        Problems/LeetCode96UniqueBinarySearchTrees.cpp
        Problems/LeetCode96UniqueBinarySearchTrees.h
        Problems/LeetCode1726TupleWithSameProduct.cpp
        Problems/LeetCode1726TupleWithSameProduct.h
        Problems/LeetCode264UglyNumberII.cpp
        Problems/LeetCode264UglyNumberII.h
        Problems/LeetCode3160FindTheNumberOfDistinctColorsAmongTheBalls.cpp
        Problems/LeetCode3160FindTheNumberOfDistinctColorsAmongTheBalls.h
        Problems/LeetCode241DifferentWaysToAddParentheses.cpp
        Problems/LeetCode241DifferentWaysToAddParentheses.h
        Problems/LeetCode116PopulatingNextRightPointersInEachNode.cpp
        Problems/LeetCode116PopulatingNextRightPointersInEachNode.h
        Problems/LeetCode390EliminationGame.cpp
        Problems/LeetCode390EliminationGame.h
        Problems/LeetCode3174ClearDigits.cpp
        Problems/LeetCode3174ClearDigits.h
        Problems/LeetCode1980FindUniqueBinaryString.cpp
        Problems/LeetCode1980FindUniqueBinaryString.h
        Problems/LeetCode1261FindElementsInAContaminatedBinaryTree.cpp
        Problems/LeetCode1261FindElementsInAContaminatedBinaryTree.h
)
